--- a/vehiculos/templates/navbar.html
+++ b/vehiculos/templates/navbar.html
@@ -8,7 +8,10 @@
     </div>
     <div class="content-right">
         <div class="dropdown">
-            <img src="https://storage.googleapis.com/media.clinicavisualyauditiva.com/images/2019/11/211fd983-default-user-image.png" width="32.5" alt="" class="dropbtn" />
+            <div class="userInfoNav">
+                <img src="https://storage.googleapis.com/media.clinicavisualyauditiva.com/images/2019/11/211fd983-default-user-image.png" width="32.5" alt="" class="dropbtn" />
+                <p>{{ user.username }}</p>
+            </div>
             <div class="dropdown-content">
                 <a href="/user/compras">Compras</a>
                 <a href="/logout">Cerrar Sesion</a>
