--- a/vehiculos/templates/paginas/login.html
+++ b/vehiculos/templates/paginas/login.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load socialaccount %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,17 +29,25 @@
                     <input type="password" placeholder="" name="password" required> 
                     <p class="lostPasswordText">Olvidaste tu contraseña? <strong><a class="link">Recuperala aqui.</a></strong></p>
                     <button class="submit">Continuar</button>
-                    <h3 class="anotherLogin">Iniciar sesion con:</h3>
-                    <div class="alternativeLoginLogos">
-                        <a href="">
-                            <i class="fa-brands fa-facebook-f fa-xl" id="icono"></i>
-                        </a>
-                        <a href="">
-                            <i class="fa-brands fa-google fa-xl"></i>
-                        </a>
-                    </div>
                 </div>
             </form>
+            <div>
+                <h3 class="anotherLogin">Iniciar sesion con:</h3>
+                <div class="alternativeLoginLogos">
+                    <form action="{% provider_login_url 'google' %}" method="post">
+                        {% csrf_token %}
+                        <button class="linkOAUTH" type="submit">
+                            <i class="fa-brands fa-google fa-xl"></i>
+                        </button>
+                    </form>
+                    <form action="{% provider_login_url  'facebook' method='oauth2' %}" method="post">
+                        {% csrf_token %}
+                        <button class="linkOAUTH" type="submit">
+                            <i class="fa-brands fa-facebook fa-xl"></i>
+                        </button>
+                    </form>
+                </div>
+            </div>
         </div>
         <div class="imgLogin">
             <img src={% static 'img/login.jpg' %} class="imgSource">
